--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Test blog site
+email: dominic.john.bennett@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  This is an awesome description of the site. It will appear in the head meta
+  and teh feed.xml.
+baseurl: "/test" # the subpath of your site, e.g. /blog/
+url: "http://bes-qsig.github.io" # the base hostname & protocol for your site
+twitter_username: BES_QE_SIG
+github_username:  BES-QSIG
 
 # Build settings
 markdown: kramdown
