--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,19 @@
 # Site settings
-title: Test blog site
+title: Test site
 email: dominic.john.bennett@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is an awesome description of the site. It will appear in the head meta
-  and teh feed.xml.
+  and the feed.xml.
 baseurl: "/test" # the subpath of your site, e.g. /blog/
 url: "http://bes-qsig.github.io" # the base hostname & protocol for your site
+relative_permalinks: false
+permalink: /news/:year/:month/:day/:title/
 twitter_username: BES_QE_SIG
 github_username:  BES-QSIG
 
 # Build settings
 markdown: kramdown
+
+collections:
+  docs:
+    output: true
