--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  BES-QSIG
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink",
-               "strikethrough", "superscript", "with_toc_data"]
+               "strikethrough", "superscript", "with_toc_data", "tables"]
 
 # Image settings
 cover: /img/cover.jpg
